--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "db:introspect": "dotenv -- prisma introspect",
     "db:generate": "dotenv -- prisma generate",
-    "postinstall": "tsc && cp src/index.d.ts dist/index.d.ts && npm exec prisma@4.6.1 generate"
+    "postinstall": "npm exec prisma generate && tsc && cp src/index.d.ts dist/index.d.ts"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,13 @@
     "@prisma/client": "^4.6.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "dotenv-cli": "^6.0.0",
     "prisma": "^4.6.1",
     "typescript": "^4.8.4"
-  }
+  },
+  "bundledDependencies": [
+    "@prisma/client",
+    ".prisma"
+  ]
 }
