--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "scripts": {
     "db:introspect": "dotenv -- prisma introspect",
     "db:generate": "dotenv -- prisma generate",
-    "copy-linux": "cp src/index.d.ts dist/index.d.ts",
-    "copy-windows": "copy src/index.d.ts dist/index.d.ts",
-    "postinstall": "npm exec prisma generate && tsc && npm run copy-linux || npm run copy-windows"
+    "copy-types": {
+      "linux": "cp src/index.d.ts dist/index.d.ts",
+      "darwin": "cp src/index.d.ts dist/index.d.ts",
+      "win32": "copy src/index.d.ts dist/index.d.ts"
+    },
+    "postinstall": "npm exec prisma generate && tsc && cross-os copy-types"
   },
   "repository": {
     "type": "git",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "cross-os": "^1.5.0",
     "dotenv-cli": "^6.0.0",
     "prisma": "^4.6.1",
     "typescript": "^4.8.4"
