--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "type": "module",
   "scripts": {
     "db:introspect": "dotenv -- prisma introspect",
-    "db:generate": "dotenv -- prisma generate",
+    "db:generate": "npm exec prisma@4.6.1 generate",
+    "build": "npm exec tsc",
+    "postinstall": "npm run db:generate && npm run build && npm exec cross-os copy-types"
+  },
+  "cross-os": {
     "copy-types": {
       "linux": "cp src/index.d.ts dist/index.d.ts",
       "darwin": "cp src/index.d.ts dist/index.d.ts",
       "win32": "copy src/index.d.ts dist/index.d.ts"
-    },
-    "postinstall": "npm exec prisma generate && tsc && cross-os copy-types"
+    }
   },
   "repository": {
     "type": "git",
@@ -27,13 +30,13 @@
   "author": "Sam Woodcock",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.6.1",
-    "cross-os": "^1.5.0"
+    "@prisma/client": "^4.6.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "cross-os": "^1.5.0",
     "dotenv-cli": "^6.0.0",
     "prisma": "^4.6.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   }
 }
