--- a/package.json
+++ b/package.json
@@ -9,14 +9,8 @@
     "db:introspect": "dotenv -- prisma introspect",
     "db:generate": "dotenv -- prisma generate",
     "build": "tsc",
-    "postinstall": "npm exec prisma@4.6.1 generate && npm exec tsc && npm exec cross-os copy-types"
-  },
-  "cross-os": {
-    "copy-types": {
-      "linux": "cp src/index.d.ts dist/index.d.ts",
-      "darwin": "cp src/index.d.ts dist/index.d.ts",
-      "win32": "copy src/index.d.ts dist/index.d.ts"
-    }
+    "prepare": "npm run db:generate && npm run build && cp src/index.d.ts dist/index.d.ts",
+    "release": "npm publish --access public"
   },
   "repository": {
     "type": "git",
@@ -34,9 +28,12 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "cross-os": "^1.5.0",
     "dotenv-cli": "^6.0.0",
     "prisma": "^4.6.1",
     "typescript": "^4.9.3"
-  }
+  },
+  "bundleDependencies": [
+    "@prisma/client",
+    ".prisma"
+  ]
 }
