--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ npm-publish:
   stage: release
   rules:
     - if: $CI_COMMIT_TAG
+  before_script:
+    - npm install
   script:
     - echo "Publishing to NPM."
     - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
