--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,5 @@ npm-publish:
   script:
     - echo "Publishing to NPM."
     - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
-    - npm run prepare
+    - npm run build
     - npm run release
