--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
+  "files": ["dist", "prisma"],
   "scripts": {
     "db:introspect": "dotenv -- prisma introspect",
     "db:generate": "dotenv -- prisma generate",
-    "build": "tsc",
-    "prepare": "npm run db:generate && npm run build && cp src/index.d.ts dist/index.d.ts",
-    "release": "npm publish --access public"
+    "build": "tsc && cp src/index.d.ts dist/index.d.ts",
+    "release": "npm publish --access public",
+    "postinstall": "npm exec prisma generate"
   },
   "repository": {
     "type": "git",
@@ -31,9 +32,5 @@
     "dotenv-cli": "^6.0.0",
     "prisma": "^4.6.1",
     "typescript": "^4.9.3"
-  },
-  "bundleDependencies": [
-    "@prisma/client",
-    ".prisma"
-  ]
+  }
 }
